# today

./: .gitignore  Cargo.toml  README.md  api.dockerfile  justfile  package-lock.json  ui.dockerfile
.github/workflows/: deploy-api.yml  deploy-ui.yml  deploy.yml  docker-image.yml
.sqlx/: query-0c381d6ca619779b83208092be9b9ff7aa882ffa7ba11e89bde49e1969d9afc0.json  query-1c8d52cd01eb28d3684a218dd5d3f9b5a53764536006c62338645fad29e600bd.json  query-2f83426805e2342bd34067366028d7288bdad847d7caca4263644bb318d1ec93.json  query-4fa23c1c5d9014bbe547b1ccc42fefcaf86c94290c304a944e58fc3321944ad3.json  query-969dd9c1e3d5da3b65778d6452de99af250bdeef3a35a5474312e6ae0c17fd48.json  query-b27c588ee5094c3d147a1e7b14de1e2870012dae69a2359b03ea1cac80f597ea.json  query-b98dd6ed719650305e6cbd92d1ad9c0fbeb276642502c65cdc372360430c812c.json  query-bac4bdcc7e5b7fb437dc4397028e3f4e6fd1ffec5df83dfdef8cb1cd521cad52.json  query-bb8af15229af95ccc4b1390458429de1ca15b3c003242e1fa2cc8f2a493fd11b.json  query-c8a8f50c526e4363714c3c8a7172172e7f576fdf657043afe5bc9cb91c53d7c5.json  query-f33bbd39d58a7652f1095f3f69460ff4cd0526e8a551779010d318cbd9d19e61.json
api/: Cargo.toml
api/src/: main.rs
api/src/routes/: auth.rs  clan.rs  event.rs  graphql.rs  health.rs  mod.rs
deployments/: api-config.yml  api-ingress.yml  api.yml  db.yml  ui-ingress.yml  ui.yml
http/: auth.http
lib/: Cargo.toml
lib/src/: config.rs  db.rs  error.rs  lib.rs  state.rs
lib/src/cqrs/: event.rs  mod.rs
lib/src/domain/: clan.rs  discord_token.rs  mod.rs  today.rs  user.rs
lib/src/graphql/: clan.rs  event.rs  mod.rs  sample.rs  today.rs
lib/src/services/: clan.rs  discord.rs  event.rs  jwt.rs  mod.rs  today.rs  user.rs
lib/src/utils/: uuid.rs
lib/src/views/: event.rs
migrations/: 20240124225232_initial.down.sql  20240124225232_initial.up.sql
ui/: .eslintignore  .eslintrc.js  codegen.ts  next.config.mjs  package-lock.json  package.json  schema.graphql  tsconfig.json
ui/src/__generated__/: gql.ts  graphql.ts  models.ts
ui/src/app/: StoreProvider.tsx  actions.ts  globals.css  hooks.ts  layout.tsx  page.tsx  storage.ts  store.ts
ui/src/app/(protected)/: layout.tsx
ui/src/app/login/: LoginForm.tsx  page.tsx
ui/src/components/: ContentEditable.tsx  LogoutButton.tsx  RouteGuard.tsx  Today.tsx
ui/src/lib/: apollo-client-server.ts  apollo-client.ts  client.ts  config.ts
ui/src/styles/: globals.css
(+21 files in other folders)
