[workspace]
resolver = "2"

members = ["api", "lib"]

[workspace.dependencies]
axum = { version = "0.7", features = ["macros"] }
anyhow = "1"
tokio = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = "1"
async-graphql = { version = "7.0.0", features = ["chrono"] }
cqrs-es = "0.4.2"
async-trait = "0.1.52"
